--- a/galaxy.ipynb
+++ b/galaxy.ipynb
@@ -2944,17 +2944,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 55,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Confusion Matrix:\n",
+      " [[12823  2220]\n",
+      " [ 2077  2880]]\n",
+      "----------------------------------------------------------\n",
+      "Classification report:\n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.86      0.85      0.86     15043\n",
+      "           1       0.56      0.58      0.57      4957\n",
+      "\n",
+      "    accuracy                           0.79     20000\n",
+      "   macro avg       0.71      0.72      0.71     20000\n",
+      "weighted avg       0.79      0.79      0.79     20000\n",
+      "\n",
+      "----------------------------------------------------------\n",
+      "accuracy score: 0.78515\n"
+     ]
+    }
+   ],
    "source": [
-    "# from sklearn.tree import DecisionTreeClassifier\n",
-    "# clf=DecisionTreeClassifier()\n",
-    "# clf.fit(x_train,y_train)\n",
-    "# y_pred=clf.predict(x_test)\n",
-    "# report=classification_report(y_test,y_pred)\n",
-    "# print(\"Classification Report:\\n\",report)\n",
-    "# print(accuracy_score(y_pred,y_test))"
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "clf=DecisionTreeClassifier()\n",
+    "clf.fit(x_train,y_train)\n",
+    "y_pred=clf.predict(x_test)\n",
+    "print(\"Confusion Matrix:\\n\",confusion_matrix(y_test,y_pred))\n",
+    "print(\"----------------------------------------------------------\")\n",
+    "print(\"Classification report:\\n\",classification_report(y_test,y_pred))\n",
+    "print(\"----------------------------------------------------------\")\n",
+    "print(\"accuracy score:\",accuracy_score(y_pred,y_test))"
    ]
   },
   {
@@ -2966,20 +2991,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 54,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Confusion Matrix:\n",
+      " [[14057   986]\n",
+      " [ 2469  2488]]\n",
+      "----------------------------------------------------------\n",
+      "Classification report:\n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.85      0.93      0.89     15043\n",
+      "           1       0.72      0.50      0.59      4957\n",
+      "\n",
+      "    accuracy                           0.83     20000\n",
+      "   macro avg       0.78      0.72      0.74     20000\n",
+      "weighted avg       0.82      0.83      0.82     20000\n",
+      "\n",
+      "----------------------------------------------------------\n",
+      "accuracy score: 0.82725\n"
+     ]
+    }
+   ],
    "source": [
-    "# from sklearn.linear_model import LogisticRegression\n",
-    "# from sklearn.metrics import confusion_matrix\n",
-    "# lg=LogisticRegression()\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.metrics import confusion_matrix\n",
+    "lg=LogisticRegression()\n",
     "\n",
-    "# log=lg.fit(x_train,y_train)\n",
-    "# y_pred=lg.predict(x_test)\n",
-    "# print(\"Confusion Matrix:\\n\",confusion_matrix(y_test,y_pred))\n",
-    "# print(\"--------------------------------------\")\n",
-    "# print(\"Classification report:\\n\",classification_report(y_test,y_pred))\n",
-    "# print(accuracy_score(y_pred,y_test))"
+    "log=lg.fit(x_train,y_train)\n",
+    "y_pred=lg.predict(x_test)\n",
+    "print(\"Confusion Matrix:\\n\",confusion_matrix(y_test,y_pred))\n",
+    "print(\"----------------------------------------------------------\")\n",
+    "print(\"Classification report:\\n\",classification_report(y_test,y_pred))\n",
+    "print(\"----------------------------------------------------------\")\n",
+    "print(\"accuracy score:\",accuracy_score(y_pred,y_test))"
    ]
   },
   {
@@ -3004,7 +3053,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -3013,8 +3062,10 @@
      "text": [
       "[[59950    96]\n",
       " [    0 19954]]\n",
+      "----------------------------------------------------------\n",
       "[[14027  2150]\n",
       " [ 1016  2807]]\n",
+      "----------------------------------------------------------\n",
       "              precision    recall  f1-score   support\n",
       "\n",
       "           0       1.00      1.00      1.00     60046\n",
@@ -3024,6 +3075,7 @@
       "   macro avg       1.00      1.00      1.00     80000\n",
       "weighted avg       1.00      1.00      1.00     80000\n",
       "\n",
+      "----------------------------------------------------------\n",
       "              precision    recall  f1-score   support\n",
       "\n",
       "           0       0.93      0.87      0.90     16177\n",
@@ -3039,43 +3091,46 @@
    "source": [
     "# print classification report,confusion matrix\n",
     "print(confusion_matrix(RFtrain,y_train))\n",
+    "print(\"----------------------------------------------------------\")\n",
     "print(confusion_matrix(RFtest,y_test))\n",
+    "print(\"----------------------------------------------------------\")\n",
     "print(classification_report(RFtrain,y_train))\n",
+    "print(\"----------------------------------------------------------\")\n",
     "print(classification_report(RFtest,y_test))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.9988\n"
+      "accuracy score: 0.9988\n"
      ]
     }
    ],
    "source": [
-    "print(accuracy_score(RFtrain,y_train))"
+    "print(\"accuracy score:\",accuracy_score(RFtrain,y_train))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.8417\n"
+      "accuracy score: 0.8417\n"
      ]
     }
    ],
    "source": [
-    "print(accuracy_score(RFtest,y_test))"
+    "print(\"accuracy score:\",accuracy_score(RFtest,y_test))"
    ]
   },
   {
