--- a/galaxy.ipynb
+++ b/galaxy.ipynb
@@ -3053,7 +3053,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -3062,9 +3062,6 @@
      "text": [
       "[[59950    96]\n",
       " [    0 19954]]\n",
-      "----------------------------------------------------------\n",
-      "[[14027  2150]\n",
-      " [ 1016  2807]]\n",
       "----------------------------------------------------------\n",
       "              precision    recall  f1-score   support\n",
       "\n",
@@ -3076,6 +3073,31 @@
       "weighted avg       1.00      1.00      1.00     80000\n",
       "\n",
       "----------------------------------------------------------\n",
+      "accuracy score: 0.9988\n"
+     ]
+    }
+   ],
+   "source": [
+    "# print classification report,confusion matrix of train data\n",
+    "print(confusion_matrix(RFtrain,y_train))\n",
+    "print(\"----------------------------------------------------------\")\n",
+    "print(classification_report(RFtrain,y_train))\n",
+    "print(\"----------------------------------------------------------\")\n",
+    "print(\"accuracy score:\",accuracy_score(RFtrain,y_train))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[14027  2150]\n",
+      " [ 1016  2807]]\n",
+      "----------------------------------------------------------\n",
       "              precision    recall  f1-score   support\n",
       "\n",
       "           0       0.93      0.87      0.90     16177\n",
@@ -3084,52 +3106,17 @@
       "    accuracy                           0.84     20000\n",
       "   macro avg       0.75      0.80      0.77     20000\n",
       "weighted avg       0.86      0.84      0.85     20000\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "# print classification report,confusion matrix\n",
-    "print(confusion_matrix(RFtrain,y_train))\n",
-    "print(\"----------------------------------------------------------\")\n",
-    "print(confusion_matrix(RFtest,y_test))\n",
-    "print(\"----------------------------------------------------------\")\n",
-    "print(classification_report(RFtrain,y_train))\n",
-    "print(\"----------------------------------------------------------\")\n",
-    "print(classification_report(RFtest,y_test))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 57,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "accuracy score: 0.9988\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(\"accuracy score:\",accuracy_score(RFtrain,y_train))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 58,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "\n",
+      "----------------------------------------------------------\n",
       "accuracy score: 0.8417\n"
      ]
     }
    ],
    "source": [
+    "print(confusion_matrix(RFtest,y_test))\n",
+    "print(\"----------------------------------------------------------\")\n",
+    "print(classification_report(RFtest,y_test))\n",
+    "print(\"----------------------------------------------------------\")\n",
     "print(\"accuracy score:\",accuracy_score(RFtest,y_test))"
    ]
   },
